--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Marker where the 3D model will appear -->
         <a-marker preset="hiro">
             <a-entity 
-                gltf-model="https://sketchfab.com/3d-models/beating-heart-d9845afb1ee64ad094adc96320c67d98" 
+                gltf-model="./heart.glb" 
                 scale="0.5 0.5 0.5" 
                 position="0 0 0"
                 rotation="0 180 0"
