--- a/index.html
+++ b/index.html
@@ -4,32 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Medical AR Model</title>
-    <!-- Load A-Frame and AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js@1.7.2/aframe/build/aframe-ar.min.js"></script>
-    <style>
-        body { margin: 0; overflow: hidden; text-align: center; }
-        #info { position: absolute; top: 10px; width: 100%; color: white; background: rgba(0, 0, 0, 0.6); padding: 10px; }
-    </style>
 </head>
-<body>
-    <div id="info">Point your camera at the **Hiro marker** to see the AR model.</div>
-
+<body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
-        <!-- Marker where the 3D model will appear -->
         <a-marker preset="hiro">
-            <a-entity 
-                gltf-model="./heart.glb" 
-                scale="0.5 0.5 0.5" 
-                position="0 0 0"
-                rotation="0 180 0"
-                animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+            <!-- Working GLB Model -->
+            <a-entity gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb"
+                      position="0 0 0"
+                      scale="0.5 0.5 0.5"
+                      rotation="0 180 0"
+                      animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
             </a-entity>
         </a-marker>
-
-        <!-- Camera -->
-        <a-entity camera></a-entity>
+        <a-camera></a-camera>
     </a-scene>
-
 </body>
 </html>
