--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <!-- Working GLB Model -->
-            <a-entity gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb"
-                      position="0 0 0"
-                      scale="0.5 0.5 0.5"
-                      rotation="0 180 0"
-                      animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
-            </a-entity>
-        </a-marker>
-        <a-camera></a-camera>
+        <a-entity gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb"
+                  position="0 0 -3"
+                  scale="1 1 1"
+                  rotation="0 180 0"
+                  animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        </a-entity>
+        <a-camera position="0 0 0"></a-camera>
     </a-scene>
 </body>
 </html>
