--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Medical AR Model</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js@1.7.2/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.7.2/aframe-ar.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
-        <a-entity gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb"
-                  position="0 0 -3"
-                  scale="1 1 1"
-                  rotation="0 180 0"
-                  animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        <!-- 3D Model appears immediately -->
+        <a-entity 
+            gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/BrainStem/glTF-Binary/BrainStem.glb"
+            position="0 0 -2"
+            scale="0.5 0.5 0.5"
+            rotation="0 180 0"
+            animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
         </a-entity>
+
+        <!-- AR Camera -->
         <a-camera position="0 0 0"></a-camera>
     </a-scene>
 </body>
