--- a/index.html
+++ b/index.html
@@ -2,37 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Medical AR Model</title>
-
-    <!-- A-Frame and AR.js libraries -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR Model Viewer</title>
+    
+    <!-- Include A-Frame and AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.7.2/aframe-ar.min.js"></script>
+
 </head>
 <body style="margin: 0; overflow: hidden;">
 
+    <!-- A-Frame Scene for AR.js -->
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- Camera Entity to Capture Real-world View -->
+
+        <!-- Camera for AR -->
         <a-camera position="0 0 0" look-controls="pointerLockEnabled: true;"></a-camera>
 
-        <!-- 3D Model Entity (Place in AR) -->
-        <a-entity gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/BrainStem/glTF-Binary/BrainStem.glb"
-                  scale="0.5 0.5 0.5"
-                  position="0 0 -2"
-                  rotation="0 180 0"
-                  gesture-handler>
+        <!-- 3D Model to be displayed -->
+        <a-entity 
+            gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/BrainStem/glTF-Binary/BrainStem.glb" 
+            position="0 0 -2"
+            scale="0.5 0.5 0.5"
+            rotation="0 180 0"
+            gesture-handler>
         </a-entity>
+
     </a-scene>
 
+    <!-- Gesture handling component for interactivity (Zoom and Rotate) -->
     <script>
-        // Gesture Control for Interactive Rotation and Zoom
         AFRAME.registerComponent('gesture-handler', {
             init: function () {
                 let el = this.el;
                 let pinchStartDistance = null;
                 let scale = 1;
 
-                // Pinch to zoom functionality
+                // Pinch zoom functionality
                 document.addEventListener('gesturestart', function (event) {
                     pinchStartDistance = event.scale;
                 });
@@ -45,7 +50,7 @@
                     }
                 });
 
-                // Rotate model with two-finger touch
+                // Rotate with two-finger touch functionality
                 let rotateStart = null;
                 document.addEventListener('touchstart', function (event) {
                     if (event.touches.length === 2) {
@@ -69,5 +74,6 @@
             }
         });
     </script>
+
 </body>
 </html>
