--- a/index.html
+++ b/index.html
@@ -2,96 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Model Viewer</title>
-    
-    <!-- Include A-Frame and AR.js -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Medical AR Model</title>
+    <!-- Load A-Frame and AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.7.2/aframe-ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js@1.7.2/aframe/build/aframe-ar.min.js"></script>
+    <style>
+        body { margin: 0; overflow: hidden; text-align: center; }
+        #info { position: absolute; top: 10px; width: 100%; color: white; background: rgba(0, 0, 0, 0.6); padding: 10px; }
+    </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
+<body>
+    <div id="info">Point your camera at the **Hiro marker** to see the AR model.</div>
 
-    <!-- Create the A-Frame AR Scene -->
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene embedded arjs>
+        <!-- Marker where the 3D model will appear -->
+        <a-marker type="pattern" url="./pattern-marker.patt" smooth="true">
+            <a-entity 
+                gltf-model="./heart.glb" 
+                scale="0.5 0.5 0.5" 
+                position="0 0 0"
+                rotation="0 180 0"
+                animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+            </a-entity>
+        </a-marker>
 
-        <!-- Camera setup for AR -->
-        <a-camera id="camera" position="0 0 0" look-controls="pointerLockEnabled: true;"></a-camera>
-
-        <!-- 3D Model to Display (Replace with Your Model) -->
-        <a-entity 
-            gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/BrainStem/glTF-Binary/BrainStem.glb" 
-            position="0 0 -2"
-            scale="0.5 0.5 0.5"
-            rotation="0 180 0"
-            gesture-handler>
-        </a-entity>
-
+        <!-- Camera -->
+        <a-entity camera></a-entity>
     </a-scene>
-
-    <script>
-        // Camera permission handling
-        function requestCameraAccess() {
-            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-                navigator.mediaDevices.getUserMedia({ video: true })
-                    .then(function(stream) {
-                        console.log("Camera access granted");
-                    })
-                    .catch(function(error) {
-                        console.error("Camera access denied or error occurred: ", error);
-                        alert("Please enable camera access for this site.");
-                    });
-            }
-        }
-
-        // Request camera access when page loads
-        window.onload = function() {
-            requestCameraAccess();
-        }
-
-        // Gesture control for rotation and zoom (Pinch-to-zoom and Rotate)
-        AFRAME.registerComponent('gesture-handler', {
-            init: function () {
-                let el = this.el;
-                let pinchStartDistance = null;
-                let scale = 1;
-
-                // Pinch zoom
-                document.addEventListener('gesturestart', function (event) {
-                    pinchStartDistance = event.scale;
-                });
-
-                document.addEventListener('gesturechange', function (event) {
-                    if (pinchStartDistance) {
-                        scale *= event.scale / pinchStartDistance;
-                        pinchStartDistance = event.scale;
-                        el.setAttribute('scale', `${scale} ${scale} ${scale}`);
-                    }
-                });
-
-                // Rotate with two-finger touch
-                let rotateStart = null;
-                document.addEventListener('touchstart', function (event) {
-                    if (event.touches.length === 2) {
-                        rotateStart = event.touches;
-                    }
-                });
-
-                document.addEventListener('touchmove', function (event) {
-                    if (rotateStart && event.touches.length === 2) {
-                        let dx = event.touches[0].clientX - event.touches[1].clientX;
-                        let dy = event.touches[0].clientY - event.touches[1].clientY;
-                        let angle = Math.atan2(dy, dx) * (180 / Math.PI);
-                        el.setAttribute('rotation', `0 ${angle} 0`);
-                    }
-                });
-
-                document.addEventListener('touchend', function () {
-                    rotateStart = null;
-                    pinchStartDistance = null;
-                });
-            }
-        });
-    </script>
 
 </body>
 </html>
