--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Medical AR Model</title>
-    <!-- Load A-Frame and AR.js -->
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js@1.7.2/aframe/build/aframe-ar.min.js"></script>
-    <style>
-        body { margin: 0; overflow: hidden; text-align: center; }
-        #info { position: absolute; top: 10px; width: 100%; color: white; background: rgba(0, 0, 0, 0.6); padding: 10px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Medical AR Model</title>
+
+  <!-- A-Frame and AR.js -->
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+
+  <!-- Optional: Orbit Controls for zoom/rotate on desktop -->
+  <script src="https://cdn.jsdelivr.net/npm/aframe-orbit-controls@1.3.0/dist/aframe-orbit-controls.min.js"></script>
+
+  <style>
+    body { margin: 0; overflow: hidden; }
+    #info {
+      position: absolute;
+      top: 10px;
+      width: 100%;
+      color: white;
+      background: rgba(0, 0, 0, 0.6);
+      text-align: center;
+      font-family: sans-serif;
+      padding: 10px;
+      z-index: 1;
+    }
+  </style>
 </head>
 <body>
-    <div id="info">Point your camera at the **Hiro marker** to see the AR model.</div>
+  <div id="info">📱 Point your camera at the <strong>Hiro Marker</strong> to view the heart model</div>
 
-    <a-scene embedded arjs>
-        <!-- Marker where the 3D model will appear -->
-        <a-marker type="pattern" url="./pattern-marker.patt" smooth="true">
-            <a-entity 
-                gltf-model="./heart.glb" 
-                scale="2 2 2"  <!-- Increased scale to make the model bigger -->
-                position="0 0 0"
-                rotation="0 180 0"
-                animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
-            </a-entity>
-        </a-marker>
+  <a-scene embedded arjs="sourceType: webcam;">
+    <!-- Marker (Hiro) -->
+    <a-marker preset="hiro">
+      <!-- 3D Heart Model -->
+      <a-entity
+        gltf-model="heart.glb"
+        scale="2 2 2"
+        position="0 0 0"
+        rotation="0 180 0"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+      </a-entity>
+    </a-marker>
 
-        <!-- Camera and controls for rotation and zoom -->
-        <a-entity camera look-controls="pointerLockEnabled: true; touchEnabled: true" 
-                  orbit-controls="auto-rotate: true; enableZoom: true; zoomFactor: 1.5">
-        </a-entity>
-    </a-scene>
-
+    <!-- Camera -->
+    <a-entity camera></a-entity>
+  </a-scene>
 </body>
 </html>
